cursor switch on hover

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,6 +3,12 @@ title: Soul Beach
 ---
 
 <div class="all">
+
+  <div id="circle">
+    <img id="dancing" src="https://thumbs.gfycat.com/AdoredReliableChrysomelid-small.gif" alt="">
+    <img id="still" src="https://images.squarespace-cdn.com/content/v1/59f6cb9accc5c57a079c3a92/1550564440708-B4Z02X4N2H8G4S6SGEBQ/ke17ZwdGBToddI8pDm48kNiEM88mrzHRsd1mQ3bxVct7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z4YTzHvnKhyp6Da-NYroOW3ZGjoBKy3azqku80C789l0uyjK65ACIS1Ro5Gtg_5NxawvmiEeEPz-p1PBnM1Qfd0YvLs_GGCwkX6Y6WN_obWbw/Strawberries_mj.gif?format=500w" alt="">
+  </div>
+
   <div class="constellation" id="one" onmouseenter="one.play()" onmouseleave="one.pause()">
     <svg height="250px" fill="white" stroke="white" xmlns="http://www.w3.org/2000/svg" viewBox="-6 -6 160 120">
       <defs>
@@ -177,6 +183,8 @@ title: Soul Beach
       </g>
     </svg>
   </div>
+
+
 </div>
 
 <script>
