--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -33,3 +33,21 @@
     top: 120px;
     left: 800px;
 }
+
+#circle {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    // height: 35px;
+    // width: 35px;
+    // border-radius: 50%;
+    // border: 2px solid white;
+    img {
+        height: 100px;
+        z-index: 20;
+    }
+}
+
+#dancing {
+    display: none;
+}
+
